--- a/style.css
+++ b/style.css
@@ -78,13 +78,24 @@ button {
   display: block;
   top: 0;
   height: 100%;
-  border-left: 5px solid grey;
+  /* border-left: 5px solid whitesmoke; */
   overflow-y: scroll;
   width: 17%;
   padding: 10px;
   margin: auto;
   z-index: 2;
-  background-color: white;
+  /* background-color: white; */
+  opacity: 70%;
+
+
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.9);
+  /* border-radius: 16px; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+
 }
 
 .button-container div {
@@ -92,7 +103,7 @@ button {
 }
 
 .button-container canvas {
-  border: 2px solid grey;
+  border: 2px solid whitesmoke;
   border-radius: 10px;
   margin-top: 10px;
 }
@@ -115,13 +126,13 @@ button {
 
 #addClass{
   width: 100px;
-  height: 100px;
+  height: 50px;
 
 }
 
 #next{
   bottom: 0%;
   position: fixed;
-  width: 16.5%;
+  width: 15%;
   right: 1%;
 }
