--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: helvetica, arial, sans-serif;
   margin: 2em;
   font-size: 9pt;
+  color: #121212;
 }
 
 h1 {
@@ -21,8 +22,9 @@ h1 {
 button {
   padding: 10px;
   margin: 5px 0px 5px 0px;
-  color: black;
+  color: #121212;
   background-color: whitesmoke;
+  opacity: 70%;
   border-radius: 5px;
 }
 
@@ -37,12 +39,18 @@ button {
   background-color: rgb(0, 0, 0,0.5);
   top: 0px;
   left: 0px;
-  display: block;
+  display: none;
+  /* display: block; */
   position: fixed;
   z-index: 2;
   width: 200px;
   height: auto;
   padding: 20px;
+}
+
+#timerContainer{
+  font-size: 9pt;
+  font-weight: unset;
 }
 
 /* #status {
@@ -123,10 +131,10 @@ button {
   margin: auto;
   z-index: 2;
   /* background-color: white; */
-  opacity: 70%;
+  /* opacity: 70%; */
 
   /* From https://css.glass */
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(255, 255, 255, 0.3);
   /* border-radius: 16px; */
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
@@ -206,11 +214,21 @@ button {
 /* Modal Content */
 .modal-content {
   position: relative;
-  background-color: #fefefe;
+    
+  /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.3);
+    /* border-radius: 16px; */
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+
+
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 60%;
+  border-radius: 5px;
+  width: 40%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
@@ -243,7 +261,7 @@ button {
 
 /* The Close Button */
 .close {
-  color: black;
+  color: #121212;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -251,15 +269,13 @@ button {
 
 .close:hover,
 .close:focus {
-  color: #000;
+  color: #121212;
   text-decoration: none;
   cursor: pointer;
 }
 
 .modal-header {
   padding: 2px 16px;
-  background-color: white;
-  color: black;
 }
 
 .modal-body {
@@ -268,6 +284,4 @@ button {
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: white;
-  color: black;
 }
