--- a/style.css
+++ b/style.css
@@ -285,3 +285,9 @@ button {
 .modal-footer {
   padding: 2px 16px;
 }
+
+#addObjButtons button{
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+}
